cmake_minimum_required(VERSION 3.3)
project(2018-PowerUp)
set(CMAKE_CXX_STANDARD 14)

file(GLOB_RECURSE SOURCES "src/*.*")
file(GLOB_RECURSE INCLUDES "src/*.*")
include_directories(src/)

file(GLOB_RECURSE DEP_INCLUDES "build/tmp/expandedArchives/wpilibc-2018.3.2-headers.zip_4790c768d89540161556bab2475dfed0/*.*" "build/tmp/expandedArchives/hal-2018.3.2-headers.zip_c2e0b10dbe01f5bb317559e19f923b7b/*.*" "build/tmp/expandedArchives/wpiutil-cpp-3.1.0-headers.zip_8913f4f6489a6d0e0336260f474dc3a0/*.*" "build/tmp/expandedArchives/ntcore-cpp-4.0.0-headers.zip_517391151665b6a51f10f788c06ee62d/*.*" "build/tmp/expandedArchives/cscore-cpp-1.2.0-headers.zip_d74028ab3c80a2c64e1d3f5057fd0f19/*.*" "build/tmp/expandedArchives/opencv-cpp-3.2.0-headers.zip_1b8591564854592a4aff6bd224b2b0a3/*.*" "build/tmp/expandedArchives/ni-libraries-2018.3.2-headers.zip_55705e66b0e6e7d3459ef1e0f179830e/*.*" "build/tmp/expandedArchives/CTRE-phoenix-cpp-5.2.1.1-headers.zip_ed51ae3396f2e2d306a9f6a233af2bce/*.*" "build/tmp/expandedArchives/navx-cpp-3.0.346-headers.zip_bdc8378de58d7490d517245a513e81b3/*.*" "build/tmp/expandedArchives/MatchData-2018.01.07-headers.zip_690b86dff7c45de52602c9654d059cf0/*.*")
include_directories(build/tmp/expandedArchives/wpilibc-2018.3.2-headers.zip_4790c768d89540161556bab2475dfed0)
include_directories(build/tmp/expandedArchives/hal-2018.3.2-headers.zip_c2e0b10dbe01f5bb317559e19f923b7b)
include_directories(build/tmp/expandedArchives/wpiutil-cpp-3.1.0-headers.zip_8913f4f6489a6d0e0336260f474dc3a0)
include_directories(build/tmp/expandedArchives/ntcore-cpp-4.0.0-headers.zip_517391151665b6a51f10f788c06ee62d)
include_directories(build/tmp/expandedArchives/cscore-cpp-1.2.0-headers.zip_d74028ab3c80a2c64e1d3f5057fd0f19)
include_directories(build/tmp/expandedArchives/opencv-cpp-3.2.0-headers.zip_1b8591564854592a4aff6bd224b2b0a3)
include_directories(build/tmp/expandedArchives/ni-libraries-2018.3.2-headers.zip_55705e66b0e6e7d3459ef1e0f179830e)
include_directories(build/tmp/expandedArchives/CTRE-phoenix-cpp-5.2.1.1-headers.zip_ed51ae3396f2e2d306a9f6a233af2bce)
include_directories(build/tmp/expandedArchives/navx-cpp-3.0.346-headers.zip_bdc8378de58d7490d517245a513e81b3)
include_directories(build/tmp/expandedArchives/MatchData-2018.01.07-headers.zip_690b86dff7c45de52602c9654d059cf0)
set(ALL_INCLUDES ${INCLUDES} ${DEP_INCLUDES})

add_executable(fake_frcUserProgram ${SOURCES} ${ALL_INCLUDES})

add_custom_target(frcUserProgram_build gradlew.bat build WORKING_DIRECTORY ../ SOURCES ${SOURCES} ${ALL_INCLUDES})
add_custom_target(frcUserProgram_deploy gradlew.bat deploy WORKING_DIRECTORY ../ SOURCES ${SOURCES} ${ALL_INCLUDES})
